Fixed background-position errors in change-wicon.css and fixed spacing in change-wicon.png

--- a/public/stylesheets/change-wicon.css
+++ b/public/stylesheets/change-wicon.css
@@ -178,56 +178,56 @@
 .wicon-opt.i-125-car-repair-general-2 { background-position: -342px -1254px;  }
 .wicon-opt.i-126-car-dealership { background-position: -342px -1311px;  }
 .wicon-opt.i-127-carwash { background-position: -342px -1368px;  }
-.wicon-opt.i-128-diagnostics-1 { background-position: -0px 0px;  }
-.wicon-opt.i-128-diagnostics { background-position: -0px -57px;  }
-.wicon-opt.i-129-hybrid-electric-vehicles { background-position: -0px -114px;  }
-.wicon-opt.i-130-leasing { background-position: -0px -171px;  }
-.wicon-opt.i-131-mechanic-shop-1 { background-position: -0px -228px;  }
-.wicon-opt.i-131-mechanic-shop { background-position: -0px -285px;  }
-.wicon-opt.i-133-oil-change { background-position: -0px -342px;  }
-.wicon-opt.i-134-road-side-assistance { background-position: -0px -399px;  }
-.wicon-opt.i-135-tire-dealer-tire-repair { background-position: -0px -456px;  }
-.wicon-opt.i-136-transmission-shop { background-position: -0px -513px;  }
-.wicon-opt.i-137-food-1 { background-position: -0px -570px;  }
-.wicon-opt.i-137-food-2 { background-position: -0px -627px;  }
-.wicon-opt.i-138-get-involved { background-position: -0px -684px;  }
-.wicon-opt.i-139-getting-assistance { background-position: -0px -741px;  }
-.wicon-opt.i-140-how-it-works-1 { background-position: -0px -798px;  }
-.wicon-opt.i-140-how-it-works { background-position: -0px -855px;  }
-.wicon-opt.i-141-legal-assistance-1 { background-position: -0px -912px;  }
-.wicon-opt.i-141-legal-assistance-2 { background-position: -0px -969px;  }
-.wicon-opt.i-142-projects { background-position: -0px -1026px;  }
-.wicon-opt.i-143-shelter { background-position: -0px -1083px;  }
-.wicon-opt.i-144-buddhist-1 { background-position: -0px -1140px;  }
-.wicon-opt.i-144-buddhist-2 { background-position: -0px -1197px;  }
-.wicon-opt.i-145-christian-1 { background-position: -0px -1254px;  }
-.wicon-opt.i-145-christian-2 { background-position: -0px -1311px;  }
-.wicon-opt.i-146-christmas { background-position: -0px -1368px;  }
-.wicon-opt.i-147-easter { background-position: -0px 0px;  }
-.wicon-opt.i-148-eid-1 { background-position: -0px -57px;  }
-.wicon-opt.i-150-hannukah { background-position: -0px -114px;  }
-.wicon-opt.i-151-hindu { background-position: -0px -171px;  }
-.wicon-opt.i-152-interfaith { background-position: -0px -228px;  }
-.wicon-opt.i-153-jewish { background-position: -0px -285px;  }
-.wicon-opt.i-154-ministry { background-position: -0px -342px;  }
-.wicon-opt.i-155-mosque { background-position: -0px -399px;  }
-.wicon-opt.i-155-muslim-1 { background-position: -0px -456px;  }
-.wicon-opt.i-155-muslim-2 { background-position: -0px -513px;  }
-.wicon-opt.i-156-passover { background-position: -0px -570px;  }
-.wicon-opt.i-157-prayer-service-1 { background-position: -0px -627px;  }
-.wicon-opt.i-157-prayer-service-2 { background-position: -0px -684px;  }
-.wicon-opt.i-158-festival { background-position: -0px -741px;  }
-.wicon-opt.i-158-ramadan-1 { background-position: -0px -798px;  }
-.wicon-opt.i-159-religious-education { background-position: -0px -855px;  }
-.wicon-opt.i-160-sacraments { background-position: -0px -912px;  }
-.wicon-opt.i-161-scientology { background-position: -0px -969px;  }
-.wicon-opt.i-162-scripture { background-position: -0px -1026px;  }
-.wicon-opt.i-163-wedding-services { background-position: -0px -1083px;  }
-.wicon-opt.i-164-311-info { background-position: -0px -1140px;  }
-.wicon-opt.i-165-911-emergecy { background-position: -0px -1197px;  }
-.wicon-opt.i-166-airport { background-position: -0px -1254px;  }
-.wicon-opt.i-167-code-compliance { background-position: -0px -1311px;  }
-.wicon-opt.i-168-convention-center-1 { background-position: -0px -1368px;  }
+.wicon-opt.i-128-diagnostics-1 { background-position: -399px 0px;  }
+.wicon-opt.i-128-diagnostics { background-position: -399px -57px;  }
+.wicon-opt.i-129-hybrid-electric-vehicles { background-position: -399px -114px;  }
+.wicon-opt.i-130-leasing { background-position: -399px -171px;  }
+.wicon-opt.i-131-mechanic-shop-1 { background-position: -399px -228px;  }
+.wicon-opt.i-131-mechanic-shop { background-position: -399px -285px;  }
+.wicon-opt.i-133-oil-change { background-position: -399px -342px;  }
+.wicon-opt.i-134-road-side-assistance { background-position: -399px -399px;  }
+.wicon-opt.i-135-tire-dealer-tire-repair { background-position: -399px -456px;  }
+.wicon-opt.i-136-transmission-shop { background-position: -399px -513px;  }
+.wicon-opt.i-137-food-1 { background-position: -399px -570px;  }
+.wicon-opt.i-137-food-2 { background-position: -399px -627px;  }
+.wicon-opt.i-138-get-involved { background-position: -399px -684px;  }
+.wicon-opt.i-139-getting-assistance { background-position: -399px -741px;  }
+.wicon-opt.i-140-how-it-works-1 { background-position: -399px -798px;  }
+.wicon-opt.i-140-how-it-works { background-position: -399px -855px;  }
+.wicon-opt.i-141-legal-assistance-1 { background-position: -399px -912px;  }
+.wicon-opt.i-141-legal-assistance-2 { background-position: -399px -969px;  }
+.wicon-opt.i-142-projects { background-position: -399px -1026px;  }
+.wicon-opt.i-143-shelter { background-position: -399px -1083px;  }
+.wicon-opt.i-144-buddhist-1 { background-position: -399px -1140px;  }
+.wicon-opt.i-144-buddhist-2 { background-position: -399px -1197px;  }
+.wicon-opt.i-145-christian-1 { background-position: -399px -1254px;  }
+.wicon-opt.i-145-christian-2 { background-position: -399px -1311px;  }
+.wicon-opt.i-146-christmas { background-position: -399px -1368px;  }
+.wicon-opt.i-147-easter { background-position: -456px 0px;  }
+.wicon-opt.i-148-eid-1 { background-position: -456px -57px;  }
+.wicon-opt.i-150-hannukah { background-position: -456px -114px;  }
+.wicon-opt.i-151-hindu { background-position: -456px -171px;  }
+.wicon-opt.i-152-interfaith { background-position: -456px -228px;  }
+.wicon-opt.i-153-jewish { background-position: -456px -285px;  }
+.wicon-opt.i-154-ministry { background-position: -456px -342px;  }
+.wicon-opt.i-155-mosque { background-position: -456px -399px;  }
+.wicon-opt.i-155-muslim-1 { background-position: -456px -456px;  }
+.wicon-opt.i-155-muslim-2 { background-position: -456px -513px;  }
+.wicon-opt.i-156-passover { background-position: -456px -570px;  }
+.wicon-opt.i-157-prayer-service-1 { background-position: -456px -627px;  }
+.wicon-opt.i-157-prayer-service-2 { background-position: -456px -684px;  }
+.wicon-opt.i-158-festival { background-position: -456px -741px;  }
+.wicon-opt.i-158-ramadan-1 { background-position: -456px -798px;  }
+.wicon-opt.i-159-religious-education { background-position: -456px -855px;  }
+.wicon-opt.i-160-sacraments { background-position: -456px -912px;  }
+.wicon-opt.i-161-scientology { background-position: -456px -969px;  }
+.wicon-opt.i-162-scripture { background-position: -456px -1026px;  }
+.wicon-opt.i-163-wedding-services { background-position: -456px -1083px;  }
+.wicon-opt.i-164-311-info { background-position: -456px -1140px;  }
+.wicon-opt.i-165-911-emergecy { background-position: -456px -1197px;  }
+.wicon-opt.i-166-airport { background-position: -456px -1254px;  }
+.wicon-opt.i-167-code-compliance { background-position: -456px -1311px;  }
+.wicon-opt.i-168-convention-center-1 { background-position: -456px -1368px;  }
 .wicon-opt.i-168-convention-center-2 { background-position: -513px 0px;  }
 .wicon-opt.i-169-courts { background-position: -513px -57px;  }
 .wicon-opt.i-170-electricty { background-position: -513px -114px;  }
